--- a/property/account-main.html
+++ b/property/account-main.html
@@ -133,7 +133,7 @@
 					var web3 = new Web3(DCARapi);
 					web3.eth.getBalance(address)
 					.then(function (result) {
-						var balanceM = web3.utils.fromWei(result, 'ether') * 10000000000;
+						var balanceM = web3.utils.fromWei(result, 'ether');
 						$('#dcarBalance').html(balanceM);
 					}).catch(function () {
 						mui.toast('链接不到笛卡尔融云链网络');
