--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -19,16 +19,16 @@
 		</header>
 		<div class="mui-content between">
 			<div class="mill_top">
-				<p class="first_line">总收益 (24h)</p>
+				<p class="first_line">总收益</p>
 				<p class="second_line">
 					<span id="balance">0</span>
 					<span class="first_line">DCAR</span>
 				</p>
-				<p class="third_line">
+				<!--<p class="third_line">
 					=
 					<span id="balanceCNY">0</span>
 					CNY
-				</p>
+				</p>-->
 			</div>
 			<div class="miner_list" id="cart_list">
 				<!--<div class="miner_box">
@@ -376,7 +376,7 @@
 											'<div class="miner_content">' +
 												'<ul class="miner_income">' +
 													'<li>' +
-														'<h6>' + '收益（DCAR/day）' + '</h6>' +
+														'<h6>' + '收益（DCAR）' + '</h6>' +
 														'<p>' + t.balance + '</p>' +
 													'</li>' +
 													'<li>' +
@@ -571,10 +571,10 @@
 //							}
 //							console.log(millList.length);
 							complete(); // 最终合成
-//							for(var b =0;b<millList.length;b++){
-//						      	balanceTotal += millList[b].balance;
-//						    }
-//							$('#balance').html(balanceTotal);
+							for(var b =0;b<millList.length;b++){
+						      	balanceTotal += millList[b].balance;
+						    }
+							$('#balance').html(balanceTotal);
 //				      		$('#balanceCNY').html(balanceTotal);
 						} else {
 							mui.toast(ret.msg);
