--- a/pages/mine.html
+++ b/pages/mine.html
@@ -65,6 +65,15 @@
 				</li>
 			</ul>
 		</div>
+		<div class="content operation_list">
+			<ul class="list">
+				<li class="newact" url="/public/version.html">
+					<i class="iconfont icon-ziyuan"></i>
+					<p>版本详情</p>
+					<span class="mui-icon mui-icon-arrowright"></span>
+				</li>
+			</ul>
+		</div>
 		<!--开机关机弹框-->
 		<div class="mui-popover alert_box">
 			<p class="alert_title">提示</p>
