--- a/public/version.html
+++ b/public/version.html
@@ -25,7 +25,8 @@
 			<!--<p class="introduce newest">
 				<span>您当前已是最新版本</span>
 			</p>-->
-			<button type="button" onclick="openWin()" class="mui-btn mui-btn-primary">下载并安装</button>
+			<input type="button" onclick="openWin()" value="openWin"/>
+			<!--<button type="button" onclick="openWin()" class="mui-btn mui-btn-primary">下载并安装</button>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/markdown.js"></script>
