--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -16,7 +16,42 @@
 		    <h1 class="mui-title">交易详情</h1>
 		</header>
 		<div class="mui-content">
-			<div class="detail">
+			<div class="detail_body">
+				<div class="img_box">
+					<img src="../img/left_man.png" alt="" class="left_img"/>
+					<img src="../img/arrow.png" alt="" class="middle_img"/>
+					<img src="../img/right_man.png" alt="" class="right_img"/>
+				</div>
+				<!--数字-->
+				<p class="trade_num">-100.00 DCAR</p>
+				<!--交易状态-->
+				<p class="trade_state">交易成功</p>
+				<div class="each_detail">
+					<div class="left_detail">交易时间</div>
+					<div class="right_detail">
+						2018-02-22 15:00
+					</div>
+				</div>
+				<div class="each_detail">
+					<div class="left_detail">交易Hash</div>
+					<div class="right_detail">
+						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687candskjhc
+					</div>
+				</div>
+				<div class="each_detail">
+					<div class="left_detail">转账账户</div>
+					<div class="right_detail">
+						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687
+					</div>
+				</div>
+				<div class="each_detail">
+					<div class="left_detail">收款账户</div>
+					<div class="right_detail">
+						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687
+					</div>
+				</div>
+			</div>
+			<!--<div class="detail">
 				<div class="title">
 					<p>金额</p>
 					<p><span class="purchase">买入</span>20 DCAR</p>
@@ -42,7 +77,7 @@
 						<li>3266.00 DCAR</li>
 					</ul>
 				</div>
-			</div>
+			</div>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
