--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -16,6 +16,59 @@
 		    <h1 class="mui-title">交易记录</h1>
 		</header>
 		<div class="mui-content">
+			<!--<div class="no_data">暂无交易记录</div>-->
+			<div class="trade_body">
+				<div class="each_trade newact" url="/users/tradeDetail.html"/>
+					<!--左侧序号-->
+					<div class="left_trade">
+						<span>25</span>
+					</div>
+					<!--中间-->
+					<div class="middle_trade">
+						<div class="hash_num">
+							<span>交易Hash:</span>
+							0ssxs...
+						</div>
+						<div class="trade_date">2018-03-03 13:00</div>
+					</div>
+					<!--右侧-->
+					<div class="right_trade">
+						<!--绿色--转出成功-->
+						<!--<div class="success_add">+100.00DCAR</div>-->
+						<!--橙色--转入成功-->
+						<div class="orange_into">-10.00 DCAR</div>
+						<!--红色--交易失败-->
+						<!--<div class="failure_trade">-10.00DCAR</div>-->
+						<div class="trade_state">交易成功</div>
+						<!--<div class="trade_state">交易关闭</div>-->
+					</div>
+				</div>
+				<div class="each_trade">
+					<!--左侧序号-->
+					<div class="left_trade">
+						<span>25</span>
+					</div>
+					<!--中间-->
+					<div class="middle_trade">
+						<div class="hash_num">
+							<span>交易Hash:</span>
+							0ssxs...
+						</div>
+						<div class="trade_date">2018-03-03 13:00</div>
+					</div>
+					<!--右侧--> 
+					<div class="right_trade">
+						<!--绿色--转出成功-->
+						<!--<div class="success_add">+100.00DCAR</div>-->
+						<!--橙色--转入成功-->
+						<div class="orange_into">-10.00 DCAR</div>
+						<!--红色--交易失败-->
+						<!--<div class="failure_trade">-10.00DCAR</div>-->
+						<div class="trade_state">交易成功</div>
+						<!--<div class="trade_state">交易关闭</div>-->
+					</div>
+				</div>
+			</div>
 			<!--<div class="record newact" url="/users/tradeDetail.html"/>
 				<h5 class="time">2018-06-30 15:00</h5>
 				<div class="detail">
