--- a/public/version.html
+++ b/public/version.html
@@ -19,13 +19,13 @@
 		<div class="mui-content between">
 			<div class="logo">
 				<i class="iconfont icon-shezhigengxin"></i>
-				<p>版本 : 1.0.0</p>
+				<p>版本 : <span id="version">加载中...</span></p>
 			</div>
-			<p class="introduce" id="versionInfo">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</p>
-			<!--<p class="introduce newest">
-				<span>您当前已是最新版本</span>
-			</p>-->
-			<button type="button" id="download" class="mui-btn mui-btn-primary">下载并安装</button>
+			<p class="introduce" id="versionInfo">加载中...</p>
+			<p class="introduce newest">
+				<span id="download">加载中...</span>
+			</p>
+			<!--<button type="button"  class="mui-btn mui-btn-primary">下载并安装</button>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/markdown.js"></script>
@@ -41,9 +41,16 @@
 				async: true,
 				success: function(ret) {
 					mui.hideLoading();
-					alert(ret.data.version)
 					if(ret.success) {
-						// alert(ret.data.version)
+						$("#versionInfo").html(ret.data.describe);
+						$("#version").html(ret.data.version);
+						var before = VERSION.split('.').join('');
+						var current = (ret.data.version).split('.').join('');
+						if (current > before) {
+							$("#download").html("请前往官网下载最新版本");
+						} else {
+							$("#download").html("您当前已是最新版本");
+						}
 					} else {
 						mui.toast(ret.msg)
 					}
@@ -53,20 +60,20 @@
 					mui.toast(error.responseJSON.msg);
 				}
 			});
-			$("#download").on("click", function(){
-				final Intent intent = new Intent();
-				intent.setAction(Intent.ACTION_VIEW);、intent.setData(Uri.parse("http://www.baidu.com"));
-				// 注意此处的判断intent.resolveActivity()可以返回显示该Intent的Activity对应的组件名
-				// 官方解释 : Name of the component implementing an activity that can display the intent
-				if (intent.resolveActivity(getPackageManager()) != null) {    
-				  final ComponentName componentName = intent.resolveActivity(getPackageManager()); 
-				  // 打印Log   ComponentName到底是什么
-				  Log.e(TAG, "componentName = " + componentName.getClassName());
-				  startActivity(Intent.createChooser(intent, "请选择浏览器"));
-				} else {    
-				  Toast.makeText(getApplicationContext(), "没有匹配的程序", Toast.LENGTH_SHORT).show();
-				}
-			})
+//			$("#download").on("click", function(){
+//				final Intent intent = new Intent();
+//				intent.setAction(Intent.ACTION_VIEW);、intent.setData(Uri.parse("http://www.baidu.com"));
+//				// 注意此处的判断intent.resolveActivity()可以返回显示该Intent的Activity对应的组件名
+//				// 官方解释 : Name of the component implementing an activity that can display the intent
+//				if (intent.resolveActivity(getPackageManager()) != null) {    
+//				  final ComponentName componentName = intent.resolveActivity(getPackageManager()); 
+//				  // 打印Log   ComponentName到底是什么
+//				  Log.e(TAG, "componentName = " + componentName.getClassName());
+//				  startActivity(Intent.createChooser(intent, "请选择浏览器"));
+//				} else {    
+//				  Toast.makeText(getApplicationContext(), "没有匹配的程序", Toast.LENGTH_SHORT).show();
+//				}
+//			})
 			// $('#versionInfo').html(markdown.toHTML(ret.data.content));
 		</script>
 	</body>
