--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -87,12 +87,11 @@
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				detailData = self.detailData;
-				status = self.status;
-				// alert(detailData)
-				if (status == 0) {
-					$("#price").html("+" + detailData.value/1000000000000000000);
-				} else if (status == 1) {
+				address = self.address;
+				if (address == detailData.from) {
 					$("#price").html("-" + detailData.value/1000000000000000000);
+				} else {
+					$("#price").html("+" + detailData.value/1000000000000000000);
 				}
 				$("#tradeHash").html(detailData.blockHash);
 				$("#outAccount").html(detailData.from);
