--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -35,19 +35,19 @@
 				<div class="each_detail">
 					<div class="left_detail">交易Hash</div>
 					<div class="right_detail" id="tradeHash">
-						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687candskjhc
+						加载中...
 					</div>
 				</div>
 				<div class="each_detail">
 					<div class="left_detail">转账账户</div>
 					<div class="right_detail" id="outAccount">
-						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687
+						加载中...
 					</div>
 				</div>
 				<div class="each_detail">
 					<div class="left_detail">收款账户</div>
 					<div class="right_detail" id="enterAccount">
-						2xjdadkya1357467da7sdssefhkwehfiuwyeicj56c5467687
+						加载中...
 					</div>
 				</div>
 			</div>
